Remove checked_at
